--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -1,3 +1,5 @@
+#####Testing###
+
 AWSTemplateFormatVersion: 2010-09-09
 Resources:
   CodeBuildServiceRole:
@@ -76,6 +78,3 @@ Resources:
         ComputeType: BUILD_GENERAL1_SMALL
         Image: aws/codebuild/standard:4.0
 
-#ww
-                
-        
